--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,9 @@
     "functions": {
         "api/*.php": {
             "runtime": "vercel-php@0.4.0"
+        },
+        {
+          "cleanUrls": true
         }
     },
     "routes": [
