--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
     "functions": {
         "api/*.php": {
-            "runtime": "vercel-php@0.5.0"
+            "runtime": "vercel-php@0.3.2"
         }
     },
     "routes": [
-        { "src": "/(.*)",  "dest": "/api/index.php" }
+        { "src": "/api/(.*)",  "dest": "/api/index.php" }
       ]
 }
